<resources>
    <string name="app_name">admin</string>
    <!--navigation drawer-->
    <string name="activity_main_open">Open</string>
    <string name="activity_main_close">Close</string>
    <string name="activity_main_menu_1">Stock</string>
    <string name="activity_main_menu_2">Basket</string>
    <string name="activity_main_menu_3">Purchase Order</string>
    <string name="activity_main_menu_4">Setting</string>
    <string name="activity_main_menu_5">Delivery Order</string>
    <!--delete action bar-->
    <string name="delete_action_bar_1">Spoiled</string>
    <string name="delete_action_bar_2">Delete</string>
    <string name="delete_action_bar_3">Select All</string>
    <string name="delete_action_bar_4">Spoiled By Weight</string>

    <string name="grade_a">Grade A</string>
    <string name="grade_b">Grade B</string>
    <string name="farmer_a">Farmer A</string>
    <string name="farmer_b">Farmer B</string>
    <string name="unknown">Unknown</string>

    <!--main activity-->
    <string name="activity_login_hint_email">Username</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_sign_in_button">Sign In</string>
    <string name="activity_login_label_before_register">Do not have an account? </string>
    <string name="activity_login_label_register"><b>Sign up Now</b></string>
    <string name="activity_login_label_forgot_password"><b>Forgot Password?</b></string>
    <string name="activity_login_sign_in_by_google">Sign In With Google</string>

    <string name="product_adapter_stock_available">Available</string>
    <string name="product_adapter_stock_unavailable">Unavailable</string>

    <string name="title_activity_stock_detail">Stock</string>
    <string name="assign_product_dialog_label_item">Product:</string>
    <string name="assign_product_dialog_send_button">Send</string>
    <string name="assign_product_dialog_cancel_button">Cancel</string>
    <string name="label_retry">RETRY</string>
    <string name="label_no_internet_connection">No Internet Connection</string>

    <string name="actionbar_label_farmer">Select a Customer</string>
    <string name="remark_fragment_approved">Approved</string>
    <string name="remark_fragment_rejected">Rejected</string>
    <string name="remark_fragment_weight_unit"> KG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
