<?xml version="1.0"   encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/select_all"
        android:title="@string/delete_action_bar_3"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete_action_bar_2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/spoiled"
        android:title="@string/delete_action_bar_1"
       app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/spoiled_by_weight"
        android:title="@string/delete_action_bar_4"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/grade_a"
        android:title="@string/grade_a"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/grade_b"
        android:title="@string/grade_b"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/farmer_a"
        android:title="@string/farmer_a"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/farmer_b"
        android:title="@string/farmer_b"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/unknown"
        android:title="@string/unknown"
        app:showAsAction="collapseActionView"/>

</menu>
